# TideGate

./: .gitignore  Makefile  README.md  README.zh.md  pyproject.toml
config/: calibrated.yaml  gateway.yaml
data/calibration/: semcache_pairs.jsonl
deploy/: docker-compose.yml
deploy/grafana/dashboards/: tidegate.json
deploy/sql/: 001_usage_ledger.sql
lua/: check_and_reserve.lua  settle.lua  sweep.lua
mock_provider/: __init__.py  __main__.py  app.py  generator.py
scripts/: calibrate_cache_threshold.py  chaos_failover.py  diagnose_semcache.py  loadgen.py  make_report.py
src/tidegate/: __init__.py  __main__.py  app.py
src/tidegate/api/: admin.py  errors.py  middleware.py  routes.py  sse.py
src/tidegate/cache/: embedding.py  gates.py  keys.py  l1.py  l2.py  normalize.py  replay.py  service.py  singleflight.py
src/tidegate/config/: holder.py  loader.py  models.py  reloader.py
src/tidegate/core/: deadline.py  (+2 more)
tests/: conftest.py
tests/fixtures/: gateway-test.yaml
tests/integration/: conftest.py  test_cache_l1.py  test_cache_l2.py  test_cascade_integration.py  test_failover.py  test_hedge_integration.py  test_ledger.py  test_providers_config.py  test_quota.py  test_quota_conservation.py  test_quota_sweep.py  test_streaming_e2e.py
tests/unit/: test_breaker.py  test_cache_service.py  test_cascade.py  test_config.py  test_errors.py  test_estimator.py  test_gates.py  test_hedge.py  test_metrics.py  test_middleware.py  test_normalize.py  test_p2c.py  test_provider.py  test_quota_service.py  test_reloader.py  test_routes_stream.py  test_singleflight.py  test_sse.py  test_stats_reporter.py
(+24 files in other folders)
