[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tidegate"
version = "0.1.0"
description = "OpenAI-compatible LLM traffic gateway"
readme = "docs/architecture.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "httpx>=0.28.0",
    "prometheus-client>=0.23.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    # DECISION: M1 uses redis-py for cfg:version polling and Pub/Sub reload broadcast.
    "redis[hiredis]>=7.1.0",
    "structlog>=25.5.0",
    "ulid-py>=1.1.0",
    "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.0",
]
test = [
    "openai>=2.13.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tidegate", "mock_provider"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "mock_provider", "tests"]

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "PT", "RET", "RUF", "SIM", "UP", "W"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["tidegate", "mock_provider"]

[[tool.mypy.overrides]]
module = ["yaml", "ulid"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires local processes or docker compose services",
]
